# sky-buccaneer

./: .clang-format  .gitmodules  CMakeLists.txt  TODO
assets/meshes/: fireball.w3d  level.z3d  player-ship.w3d
assets/shaders/: billboard.frag  billboard.geom  billboard.vert  decal.vert  phong.frag  phong.vert  shadow.vert  simple.frag  simple.vert
doc/: EntityFile.txt
scripts/: entity_exporter.py  export.py  export_entity.py
src/: CMakeLists.txt  camera.cc  camera.h  collisionmesh.cc  collisionmesh.h  datastream.cc  datastream.h  entity.cc  entity.h  fileasset.cc  fileasset.h  foe.cc  foe.h  frustum.cc  gameobject.cc  gameobject.h  geometryutils.cc  geometryutils.h  image.cc  image.h  inputstate.h  level.cc  level.h  main.cc  material.cc  material.h  materialcache.cc  materialcache.h  mesh.cc  mesh.h  octree.cc  octree.h  player.cc  player.h  renderer.cc  renderer.h  shadermanager.cc  shadermanager.h  shaderprogram.cc  shaderprogram.h  (+10 more)
tests/: TransformTest.blend
